spade-tests/src/snapshots/spade_tests__ast_lowering__negative_stage_index.snap
---
source: spade-tests/src/ast_lowering.rs
---
pipeline(3) main(clk: clock, x: int<8>) -> int<8> {
        let a = stage(-1).x;
    reg;
    reg;
    reg;
        0
}


error: Pipeline references cannot refer to negative stages, inferred -1
  ┌─ testinput:2:17
  │
2 │         let a = stage(-1).x;
  │                 ^^^^^^^^^ This references stage -1
  │
  = help: This offset is relative to the current stage which is 0
