spade-tests/src/snapshots/spade_tests__ast_lowering__negative_stage_index_later.snap
---
source: spade-tests/src/ast_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Reference to negative pipeline stage
  ┌─ testinput:4:24
  │
4 │         let a = stage(-5).x;
  │                        ^ This references a negative pipeline stage
  │
  = note: Since this is at stage 2, -5 references stage -3
  = note: Pipeline stages start at 0


