spade-tests/src/snapshots/spade_tests__ast_lowering__no_mangle_on_enum_members_is_disallowed.snap
---
source: spade-tests/src/ast_lowering.rs
---
enum T {
    A{#[no_mangle] x: bool}
}

error: Unexpected `#`, expected `Identifier`
  ┌─ testinput:2:7
  │
2 │     A{#[no_mangle] x: bool}
  │       ^ expected `Identifier`


