spade-tests/src/snapshots/spade_tests__ast_lowering__non_ports_can_not_contain_transitive_ports.snap
---
source: spade-tests/src/ast_lowering.rs
---
struct port P {
    x: &int<32>
}
struct A {
    x: P
}

error: Port in non-port struct
  ┌─ testinput:5:8
  │
4 │ struct A {
  │        - This is not a port struct
5 │     x: P
  │        ^ This is a port
  │
  = Consider making A a port struct
  │
4 │ struct port A {
  │        +++++


