spade-tests/src/snapshots/spade_tests__ast_lowering__pattern_list_length_mismatch_enum_variant.snap
---
source: spade-tests/src/ast_lowering.rs
---
enum X {
    A { one: bool, two: bool }
}

fn main(x: X) -> X {
    match x {
        X::A(one, two, three) => x
    }
}


error: Expected 2 arguments, got 3
  ┌─ testinput:7:13
  │
7 │         X::A(one, two, three) => x
  │             ^^^^^^^^^^^^^^^^^ Expected 2 arguments


